# EmbevityRecruitmentTask

Code/ImuDriver/: CMakeLists.txt  FreeFallDetector.cpp  FreeFallLogger.cpp  ImuDriver.cpp  Logger.cpp  Register.cpp  SimulatedI2c.cpp  UserInterface.cpp  main.cpp
Code/ImuDriver/Include/ImuDriver/Common/: BitOperations.hpp  Logger.hpp  Register.hpp
Code/ImuDriver/Include/ImuDriver/Implementation/: FreeFallDetector.hpp  FreeFallLogger.hpp  ImuDriver.hpp  ImuRegisters.hpp  SimulatedI2c.hpp
Code/ImuDriver/Include/ImuDriver/Interface/: I2c.hpp  ImuDriver.hpp
Code/ImuDriver/Include/ImuDriver/View/: UserInterface.hpp
Code/ImuSimulator/: main.py
